Fixed 'places' issue on iphone

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -32,6 +32,10 @@ span.text {
 	margin:20px;
 	color:black;
 }
+.thumbnail
+{
+    height: 180px;
+}
 
 table
 {
